--- a/src/Calendar/calendar.module.scss
+++ b/src/Calendar/calendar.module.scss
@@ -4,10 +4,23 @@
   margin: auto;
   // display: grid;
   // justify-content: center;
-
   text-align: center;
 }
 
+.monthHeader {
+  background-color: aquamarine;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  align-items: center;
+}
+
+.navBtn {
+  width: 3.5rem;
+  height: 2rem;
+  // margin: 10px;
+  // padding: 0;
+}
 .daysOfWeek {
   // background-color: aqua;
   display: flex;
