--- a/src/Calendar/calendar.module.scss
+++ b/src/Calendar/calendar.module.scss
@@ -1,50 +1,140 @@
 .calendarMain {
-  background-color: chocolate;
-  width: 700px;
+  background-color: #ad794b;
+  // width: 800px;
+  width: 80%;
+  // height: auto;
   margin: auto;
   // display: grid;
   // justify-content: center;
   text-align: center;
+  flex: 1;
+}
+
+.monthMainHeader {
+  background-color: #596854;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  padding: 0 2rem;
 }
 
 .monthHeader {
-  background-color: aquamarine;
   display: flex;
   justify-content: space-around;
   text-align: center;
   align-items: center;
 }
 
-.navBtn {
-  width: 3.5rem;
-  height: 2rem;
-  // margin: 10px;
+.calendarH2 {
+  width: 12rem;
+  margin-right: 2rem;
+  text-align: center;
+  align-items: center;
+}
+
+.monthNavBtn {
+  display: flex;
+  justify-content: space-around;
+  width: 7.5rem;
+  // height: 2rem;
+  // margin-left: 60px;
   // padding: 0;
 }
+
+.navBtns {
+  width: 3.5rem;
+  height: 2rem;
+  font-size: 0.9rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #cc9a52;
+  cursor: pointer;
+}
+
+.navBtns:active {
+  background-color: #c78932;
+  opacity: 0.8;
+}
+
+.addEventBtn {
+  width: 5rem;
+  height: 2rem;
+  font-size: 0.9rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #cc9a52;
+  cursor: pointer;
+}
+
+.addEventBtn:active {
+  background-color: #c78932;
+  opacity: 0.8;
+}
+
 .daysOfWeek {
-  // background-color: aqua;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(7, auto);
   padding: 1rem 2rem;
-  border: 1px solid black;
+  text-align: center;
+  align-items: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .dayOfWeek {
   flex: 1;
+  text-align: center;
+  align-items: center;
+  padding: 0 2rem;
+  margin: 0.3rem 1rem;
+  font-weight: 600;
+  // margin: 0.5rem;
+  // height: 3rem;
+  width: 3rem;
 }
 
 .gridNumberDays {
-  // margin: 0;
   display: grid;
   grid-template-columns: repeat(7, auto);
-  padding: 1rem 2rem;
+  padding: 1rem 0;
+  flex: 1;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 
 .gridNumberDay {
-  // border: 1px solid black;
   text-align: center;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 2rem;
+  margin: 0.3rem 1rem;
+  height: 3rem;
+  width: 3rem;
+  // flex: 1;
+}
 
-  // padding: 1rem 2rem;
+.gridNumberDay:hover {
+  background-color: #554f48;
+  cursor: pointer;
+}
+
+.eventIndicatorsContainer {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.eventIndicatorsContainer:hover {
+  background-color: #554f48;
+}
+
+.eventIndicator {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.gridNumberDayIndicator {
+  display: flex;
+  justify-content: center;
 }
