--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
-/* .App {
+.App {
+  width: 90%;
+  /* height: 50%; */
+  margin: auto;
+  flex: 1;
+  height: 600px;
   text-align: center;
 }
+
+/*
+
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +44,22 @@
     transform: rotate(360deg);
   }
 } */
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: rgb(221, 220, 218);
+  /* width: 100%; */
+  height: 600px;
+  /* position: relative; */
+  /* overflow: hidden; */
+  /* width: 90%; */
+  /* height: 50%; */
+  /* margin: auto; */
+  flex: 1;
+  /* text-align: center; */
+}
+
+h1 {
+  text-align: center;
+}
