--- a/src/AddEvent/addEvent.module.scss
+++ b/src/AddEvent/addEvent.module.scss
@@ -19,7 +19,7 @@
   height: 80%;
   width: 100%;
   max-width: 500px;
-  background-color: rgba(255, 255, 255, 0.72);
+  background-color: rgba(163, 169, 175, 0.9);
   border-radius: 20px;
 }
 
@@ -44,6 +44,7 @@ input {
   padding: 0.8rem;
   border-radius: 0.5rem;
   border: none;
+  background-color: rgb(221, 220, 218);
 }
 
 .modalBtns {
@@ -60,11 +61,12 @@ input {
   font-size: 1rem;
   border-radius: 0.5rem;
   border: none;
-  background-color: #cc9a52;
+  background-color: #154b94;
+  color: rgb(221, 220, 218);
   cursor: pointer;
 }
 
 .addCloseBtn:active {
-  background-color: #c78932;
+  background-color: #828b9b;
   opacity: 0.8;
 }
