--- a/src/Calendar/calendar.module.scss
+++ b/src/Calendar/calendar.module.scss
@@ -1,45 +1,34 @@
 .calendarMain {
-  background-color: #ad794b;
-  // width: 800px;
+  background-color: #154b94;
   width: 80%;
-  // height: auto;
-  margin: auto;
-  // display: grid;
-  // justify-content: center;
+  margin: 0 auto;
   text-align: center;
   flex: 1;
 }
 
+.weekAdnDays {
+  display: flex;
+  flex-direction: column;
+}
+
 .monthMainHeader {
-  background-color: #596854;
+  background-color: #154b94;
   display: flex;
   justify-content: space-between;
   text-align: center;
   align-items: center;
-  padding: 0 2rem;
-}
-
-.monthHeader {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  align-items: center;
+  margin: 0 4.5rem;
 }
 
 .calendarH2 {
   width: 12rem;
-  margin-right: 2rem;
   text-align: center;
-  align-items: center;
 }
 
 .monthNavBtn {
   display: flex;
   justify-content: space-around;
   width: 7.5rem;
-  // height: 2rem;
-  // margin-left: 60px;
-  // padding: 0;
 }
 
 .navBtns {
@@ -48,34 +37,39 @@
   font-size: 0.9rem;
   border-radius: 0.5rem;
   border: none;
-  background-color: #cc9a52;
+  background-color: #e0e0e0;
+  font-weight: 560;
   cursor: pointer;
+  position: relative;
 }
 
 .navBtns:active {
-  background-color: #c78932;
+  background-color: #828b9b;
   opacity: 0.8;
 }
 
 .addEventBtn {
-  width: 5rem;
+  width: 5.5rem;
   height: 2rem;
   font-size: 0.9rem;
   border-radius: 0.5rem;
+  font-weight: 560;
   border: none;
-  background-color: #cc9a52;
+  background-color: #e0e0e0;
   cursor: pointer;
 }
 
 .addEventBtn:active {
-  background-color: #c78932;
+  background-color: #828b9b;
   opacity: 0.8;
 }
 
 .daysOfWeek {
+  background-color: #a3a9af;
   display: grid;
-  grid-template-columns: repeat(7, auto);
-  padding: 1rem 2rem;
+  grid-template-columns: repeat(7, 1fr);
+  justify-content: center;
+  padding: 0.8rem 0.8rem;
   text-align: center;
   align-items: center;
   border-top: 1px solid black;
@@ -83,39 +77,34 @@
 }
 
 .dayOfWeek {
-  flex: 1;
   text-align: center;
   align-items: center;
   padding: 0 2rem;
-  margin: 0.3rem 1rem;
+  margin: 0.3rem 0;
   font-weight: 600;
-  // margin: 0.5rem;
-  // height: 3rem;
-  width: 3rem;
+  width: auto;
 }
 
 .gridNumberDays {
+  background-color: #e0e0e0;
   display: grid;
-  grid-template-columns: repeat(7, auto);
-  padding: 1rem 0;
-  flex: 1;
-  justify-content: center;
+  grid-template-columns: repeat(7, 1fr);
+  padding: 0.5rem 0.8rem;
+  justify-content: space-evenly;
   text-align: center;
   align-items: center;
 }
 
 .gridNumberDay {
+  justify-content: center;
   text-align: center;
-  align-items: center;
   padding: 1rem 2rem;
   margin: 0.3rem 1rem;
   height: 3rem;
-  width: 3rem;
-  // flex: 1;
 }
 
 .gridNumberDay:hover {
-  background-color: #554f48;
+  background-color: #8da9d0;
   cursor: pointer;
 }
 
@@ -126,15 +115,89 @@
 }
 
 .eventIndicatorsContainer:hover {
-  background-color: #554f48;
+  background-color: #8da9d0;
 }
 
 .eventIndicator {
   font-size: 1.5rem;
+  color: rgb(247, 47, 47);
   text-align: center;
 }
 
 .gridNumberDayIndicator {
   display: flex;
   justify-content: center;
+}
+
+@media (min-width: 769px) {
+  .calendarMain {
+    width: 80%;
+  }
+
+  .weekAdnDays {
+    width: 100%;
+    height: auto;
+  }
+
+  .daysOfWeek {
+    display: grid;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .dayOfWeek {
+    padding: 0 1.3rem;
+    text-align: center;
+    margin: 0.3rem;
+    width: auto;
+  }
+
+  .gridNumberDays {
+    padding: 0 0.4rem;
+  }
+
+  .gridNumberDay {
+    display: grid;
+    justify-content: center;
+    padding: 1rem 2rem;
+    margin: 5% 25%;
+    width: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .calendarMain {
+    width: 100%;
+  }
+
+  .monthMainHeader {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 2rem;
+  }
+
+  .calendarH2 {
+    font-size: 1.2rem;
+  }
+  .weekAdnDays {
+    margin: 0;
+    height: auto;
+  }
+
+  .daysOfWeek {
+    display: grid;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .dayOfWeek {
+    padding: 0 0.8rem;
+  }
+
+  .gridNumberDay {
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    padding: 0 0.8rem;
+  }
 }
